# xpubsub

./: .gitignore  .readme.tpl  LICENSE  README.md  dodo.py  example.py  include.py  pyproject.toml  tox.ini
stubs/xpubsub/: __init__.pyi  pubsub.pyi
tasks/: readme.py
tests/: test_pubsub.py
xpubsub/: __init__.py  pubsub.py
