[tool.poetry]
name = "xpubsub"
version = "0.1.0"
description = "Basic PubSub for python app."
authors = ["treborg <treborg@atomix.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.10.0"
flake8 = "^5.0.4"
icecream = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
