[tool.poetry]
name = "xpubsub"
version = "0.1.0"
description = "Basic PubSub for python app."
authors = ["treborg <treborg@atomix.uk>"]
license = "MIT"

repository = "https://github.com/treborg/xpubsub"
documentation = "https://github.com/xpubsub"
readme = "README.md"

classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = ">=3.9"
mypy = "^0.991"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.10.0"
flake8 = "^5.0.4"
tox = "^3.27.1"
icecream = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
