[tool.poetry]
name = "xpubsub"
version = "0.2.1"
description = "Basic PubSub for python app."
authors = ["treborg <treborg@atomix.uk>"]
license = "MIT"

repository = "https://github.com/treborg/xpubsub"
documentation = "https://github.com/xpubsub"
readme = "README.md"
keywords = [
  "pubsub", "utility", "example", "education",
  "python", 'doit'
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = ">=3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.10.0"
flake8 = "^5.0.4"
tox = "^3.27.1"
mypy = "^0.991"
doit = "^0.36.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
